Fix conf for new URL scheme.

--- a/src/conf/dev.conf
+++ b/src/conf/dev.conf
@@ -50,7 +50,6 @@ logger.application=DEBUG
 
 # Service specific
 # ~~~~~
-service.scheme="http"
-service.url="http://localhost.com/"
+service.url="http://localhost.com:9000/"
 service.domain="localhost.com"
 session.domain=".localhost.com"
