Change service url to local.webnikki.com to use session.

--- a/src/conf/dev.conf
+++ b/src/conf/dev.conf
@@ -50,6 +50,6 @@ logger.application=DEBUG
 
 # Service specific
 # ~~~~~
-service.url="http://localhost:9000/"
-service.domain="localhost"
-session.domain=".localhost"
+service.url="http://local.webnikki.com:9000/"
+service.domain="local.webnikki.com"
+session.domain=".local.webnikki.com"
