Add conf for WSSE.

--- a/src/conf/dev.conf
+++ b/src/conf/dev.conf
@@ -52,4 +52,5 @@ logger.application=DEBUG
 # ~~~~~
 service.url="http://local.webnikki.com:9000/"
 service.domain="local.webnikki.com"
+service.wssepass="wsse-pass"  # Each user should have each own wsse-pass, but it's for an experiment
 session.domain=".local.webnikki.com"
